--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,11 @@
-
 <header class="main_header">
-  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}B<span>ef</span>{% endif %}</a>
+  <a href="{{site.baseurl}}/" class="logo">
+    <div class="image">
+      <img src="{{site.baseurl}}/assets/img/favicon/logo.gif" width="78" height="52">&nbsp;&nbsp;{{site.logo}}
+    </div>
+  </a>
   <nav class="main_menu">
-    <a href="{{site.baseurl}}/about/">About</a>
-    <a href="{{site.baseurl}}/contact/">Contact</a>
+    <a href="{{site.baseurl}}/about/">关于我</a>
+    <a href="{{site.baseurl}}/contact/">联系我</a>
   </nav>
 </header> <!-- End Section Header -->
