--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,11 +1,11 @@
 
 <section class="newsletter" id="mc_embed_signup">
-  <h2 class="newsletter_title">哈哈哈</h2>
+  <h2 class="newsletter_title">订阅我的博客</h2>
   <form action="//{{ site.mailchimp }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <label for="mce-EMAIL">Subscribe here to get our latest updates</label>
+    <label for="mce-EMAIL">订阅后每当博客更新时您将会第一时间收到通知哦~</label>
     <div class="newsletter_box" id="mc_embed_signup_scroll">
-      <input type="email" name="EMAIL" placeholder="Email address" class="email_input" id="mce-EMAIL" required>
-      <input type="submit" value="Subscribe" name="subscribe" class="subscribe_btn" id="mc-embedded-subscribe">
+      <input type="email" name="EMAIL" placeholder="输入你的邮箱 (*^▽^*)" class="email_input" id="mce-EMAIL" required>
+      <input type="submit" value="马上订阅" name="subscribe" class="subscribe_btn" id="mc-embedded-subscribe">
     </div>
   </form>
 </section> <!-- End Section Newsletter -->
