--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header class="main_header">
   <a href="{{site.baseurl}}/" class="logo">
     <div class="image">
-      <img src="{{site.baseurl}}/assets/img/favicon/logo.gif" width="78" height="52">&nbsp;&nbsp;{{site.logo}}
+      <img src="{{site.baseurl}}/assets/img/favicon/logo.gif" width="78" height="52">
+      <span>&nbsp;&nbsp;{{site.logo}}</span>
     </div>
   </a>
   <nav class="main_menu">
