--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
-
 <footer class="main_footer">
-  <div class="wrapper">
-    {% include social_footer.html %}
-    <div class="copyright">
-      <p>&copy; {{site.time | date: '%Y'}} Design by <a href="https://artemsheludko.github.io" target="_blank">糖糖</a></p>
+    <div class="wrapper">
+        {% include social_footer.html %}
+        <div class="copyright">
+            <p>&copy; {{site.time | date: '%Y'}} Design by <a href="https://heretjz.github.io" target="_blank">糖糖</a></p>
+        </div>
     </div>
-  </div>
-</footer> <!-- End Section Footer -->
+</footer>
+<!-- End Section Footer -->
